plugins {
    id 'application'
    id 'org.springframework.boot' version '2.6.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

repositories {
    mavenCentral()
}

application {
    apply plugin: 'java'
    apply plugin: 'application'
    mainClassName = 'org.safety.library.Main'
}

test {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
}

dependencies {
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.hibernate:hibernate-core:5.6.0.Final'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    implementation group: 'org.apache.derby', name: 'derbyclient', version: '10.14.1.0'
    implementation 'org.springframework.security:spring-security-core:5.6.0'
    implementation 'org.json:json:20171018'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
}